--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,8 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+h1 {
+  display: flex;
+  justify-content: center;
+}
+h2 {
+  display: flex;
+  justify-content: center;
+}
